--- a/nfs-test/gpu-deployment-nfs.yaml
+++ b/nfs-test/gpu-deployment-nfs.yaml
@@ -24,9 +24,9 @@ spec:
           name: cloth-volume
         resources:
           limits:
-            nvidia.com/gpu: 3
+            nvidia.com/gpu: 1
       volumes:
       - name: cloth-volume
-        hostPath:
-          path: /home/chenyiping/data-3/
-          type: Directory
+        nfs:
+          server: 10.0.10.203
+          path: /data
