--- a/nfs-test/gpu-deployment-nfs.yaml
+++ b/nfs-test/gpu-deployment-nfs.yaml
@@ -1,32 +1,32 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: cloth-deployment
+  name: my-deployment
   labels:
-    app: clothdnn
+    app: mydnn
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: clothdnn
+      app: mydnn
   template:
     metadata:
       labels:
-        app: clothdnn
+        app: mydnn
     spec:
       containers:
-      - name: cloth-test
-        image: cloth-test:v0
+      - name: my-test
+        image: my-test:v0
         command: ["python"]
         args: ["run_train.py"]
         volumeMounts:
         - mountPath: /data
-          name: cloth-volume
+          name: my-volume
         resources:
           limits:
             nvidia.com/gpu: 1
       volumes:
-      - name: cloth-volume
+      - name: my-volume
         nfs:
           server: 10.0.10.203
           path: /data
